# Vinex

./: CMakeLists.txt  CustomLnF.h  EducationalSystem.cpp  EducationalSystem.h  Envelope.cpp  Envelope.h  FilterEditor.cpp  FilterEditor.h  OscEditor.cpp  OscEditor.h  Oscillators.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  SynthSound.h  SynthVoice.h
src/: Constants.h  DspConstants.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BasicWaveformsGenerator.h  Oversampling.cpp  Oversampling.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  Wavetable.cpp  Wavetable.h  WavetableOscillator.cpp  WavetableOscillator.h
src/gui/: HeaderPanel.cpp  HeaderPanel.h  Knob.cpp  Knob.h  OscSection.cpp  OscSection.h  PluginEditor.cpp  PluginEditor.h  PresetBrowser.cpp  PresetBrowser.h  Section.cpp  Section.h  VinexColours.h  VinexLookAndFeel.cpp  VinexLookAndFeel.h  WavetableVisualizer.cpp  WavetableVisualizer.h
src/service/: PresetManager.cpp  PresetManager.h  WavetableManager.cpp  WavetableManager.h
